# video

./: DEBUGGING_SOLUTION.md  INSTALLATION_GUIDE.md  MergeVideo.md  MergeVideo_UI.md  README.md  main.py  package-lock.json  package.json  project_roadmap.md  project_roadmap_vi.md  pyproject.toml  webpack.config.js  yeu cau.txt
gui/: app.py  constants.py
src/backend/video_engine/: caption.py  export.py  processor.py
src/backend/video_processing/: video_cutter.py  video_editor.py  video_merger.py
src/main/: main.js
src/renderer/gui/: App.js  app.js  app.py  bundle.js  bundle.js.map  constants.py  ffmpeg-worker.js  index.css  index.html
src/renderer/gui/components/: AISubtitle.js  Backup videocuter.js  BatchProcessing.js  CutVideo.css  CutVideo.js  CutVideo.module.css  Footer.js  Home.css  Home.js  MergeVideo.js  RemoveAudio.js  TabSwitcher.js  TiktokYoutubePreset.js  cutvideo.css
src/renderer/gui/components/Cutvideo-components/: Header.js  LeftSidebar.js  MainContent.js  PresetPlatform.css  PresetPlatform.module.css  ProgressModal.js  RecentFilesList.js  RightSidebar.js  SettingsModal.js  ShortcutsModal.js  TimelineControls.js  VideoPlayer.js
src/renderer/gui/components/MergeVideo-components/: ExportProgressModal.js  HelpModal.js  MediaLibrary.js  MergeVideoHeader.js  PreviewPanel.js  SettingsModal.js  SettingsPanel.js  Timeline.js  TransitionPanel.js  VideoClip.js
src/renderer/gui/hooks/: useFileManager.js  useVideoPlayer.js  useVideoProcessor.js
src/renderer/gui/utils/: formatTime.js
video_processing/: video_cutter.py  video_editor.py  video_merger.py
(+10 files in other folders)
